# comfy-ez-installer

./: .gitignore  .pre-commit-config.yaml  README.md  comfyctl.py  config.example.yml  docker-compose.yml  pyproject.toml
docker/: Dockerfile.mac  Dockerfile.runpod
scripts/: download_civitai_models.py  entrypoint.sh  install_comfy_and_models.sh  lint.sh  validate_config.py
tests/: README.md  __init__.py  conftest.py  test_comfyctl.py  test_download_civitai.py  test_install_script.py  test_runner.py  test_validate_config.py  test_validate_config_pytest.py  test_workflow_references.py  test_yaml_processing.py
tests/data/: invalid_config.yml  valid_full_config.yml  valid_minimal_config.yml  workflow_config.yml
